--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcsh 'Nonsense verses, English'
 - !lcsh 'Limericks, Juvenile'
 - !lcc 'PR'
+- GITenberg
 tableOfContents: A book of nonsense -- Nonsense songs, stories, botany, and alphabets
   -- More nonsense, pictures, rhymes, botany, etc. -- Laughable lyrics, a fourth book
   of nonsense poems, songs, botany, music, etc.
